v1.22 - December 4 2012
  + OSX version: cursor support for 10.6+
  + OSX version: mouse click detection (may require "enable access for assistive devices" on some OS versions)
  + OSX version: fixed time text artifacts

v1.21 - November 29 2012
  + OSX version: fixed support for 10.7+, newer API use on 10.6 (CGDisplayCreateImageForRect)

v1.2 - August 4 2011
  + Allow user to set capture dimensions before recording
  + OSX version: v1.2alpha (doesn't support proper cursors or mouse status or hotkeys, but somewhat usable)

v1.11 - October 10 2010 (JeffOS release)
  + Insert text frames (when paused)

v1.1 - June 9 2010
  + Fixed LCF export for widths not multiples of 4
  + Added hotkey for pause (shift+space)

v1.0 - June 7 2010
  + First release